--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,13 @@
 </head>
 <body>
   <app-root></app-root>
+  <br><br>
 </body>
+<footer class="text-center text-white fixed-bottom" style="background-color: #21081a;">
+  <div class="text-center p-2" style="background-color: rgba(0, 0, 0, 0.2);">
+    © 2022 Copyright:
+    <a class="text-white" href="https://www.linkedin.com/in/oussamaharchi/">Oussama Harchi</a>
+  </div>
+  <!-- Copyright -->
+</footer>
 </html>
